chore: atualizar título e metatags da aplicação para identidade PrismaFlow
- Ajustado <title> para "PrismaFlow — Gestão que flui para óticas independentes"
- Adicionadas metatags de descrição, palavras-chave e autor
- Incluídas metatags Open Graph para melhor SEO e compartilhamento social

--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/icons/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DASHBOARD TEMPLATE</title>
+
+    <!-- Título ajustado -->
+    <title>PrismaFlow — Gestão que flui para óticas independentes</title>
+
+    <!-- Metatags -->
+    <meta
+      name="description"
+      content="PrismaFlow é um ERP + CRM moderno que traz clareza e fluidez para a gestão de óticas independentes. Organize sua ótica com simplicidade e inovação."
+    />
+    <meta
+      name="keywords"
+      content="PrismaFlow, ERP ótica, CRM ótica, gestão de óticas, sistema ótica, organização ótica"
+    />
+    <meta name="author" content="PrismaFlow" />
+
+    <!-- Social (Open Graph) -->
+    <meta property="og:title" content="PrismaFlow — Gestão que flui" />
+    <meta
+      property="og:description"
+      content="ERP + CRM feito para óticas independentes. Clareza, fluidez e modernidade na sua gestão."
+    />
+    <meta property="og:image" content="/icons/logo.png" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
