--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       property="og:description"
       content="ERP + CRM feito para óticas independentes. Clareza, fluidez e modernidade na sua gestão."
     />
-    <meta property="og:image" content="/icons/logo.png" />
+    <meta property="og:image" content="/icons/logo-prismaflow.svg" />
     <meta property="og:type" content="website" />
   </head>
   <body>
